# skumb

./: .editorconfig  .example.env  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
.github/workflows/: deploy.yaml  deploy_lambda.yaml  test.yaml  test_rust.yaml  test_vue.yaml
.rusty_dev_tool/: config.toml
fe/: .eslintrc  .example.env  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
fe/src/: App.vue  i18n.js  main.js
fe/src/assets/: main.css
fe/src/components/: Chat.vue  ChatHeader.vue  ChatInput.vue  ChatOutput.vue  CreateToDoItem.vue  DeleteButton.vue  HeaderNav.vue  HelloWorld.vue  Snackbar.vue  TheWelcome.vue  ToDoItemDetails.vue  ToDoItemLink.vue  ToDoItems.vue  TransitionButton.vue  UpdateButton.vue
fe/src/router/: index.js  routes.js
fe/src/security/: security.js
fe/src/stores/: ToDoItem.js  ToDoItems.js  app.js  chat.js
fe/src/translations/: de.json  en.json
fe/src/views/: ChatView.vue  ToDoItemView.vue  ToDoItemsView.vue
migrations/2024-04-20-185228_create_user_table/: down.sql  up.sql
migrations/2024-07-05-190916_create_chat_table/: up.sql
migrations/2024-07-05-204228_create_chat_message_table/: down.sql  up.sql
postman/: skumb.postman_collection.json  skumb.postman_environment.json
src/: database.rs  jwt.rs  main.rs  schema.rs  ws_actor.rs
src/helpers/: datetime.rs  email.rs  env.rs  mod.rs  uuid.rs
src/json_serialization/: mod.rs
src/json_serialization/response/: item.rs  json_response.rs  mod.rs  response_item.rs  response_status.rs  status.rs
src/json_serialization/user/: edit_item.rs  edit_user_item.rs  item.rs  items.rs  mod.rs  new_item.rs  new_user_item.rs  password_item.rs  user_item.rs  (+2 more)
src/views/: mod.rs
(+38 files in other folders)
