[package]
name = "skumb"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.11.1"
serde_json = "1.0.116"

lazy_static = "1.4.0"
futures = "0.3.30"
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2", "uuid"] }
sentry = "0.32.3"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
bcrypt = "0.15.1"
serde = { version = "1.0.198", features = ["derive"] }
jsonwebtoken = "9.3.0"
regex = "1.10.4"
