[package]
name = "skumb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.116"
lazy_static = "1.4.0"
futures = "0.3.30"
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2", "uuid"] }
sentry = "0.34.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
bcrypt = "0.15.1"
serde = { version = "1.0.198", features = ["derive"] }
jsonwebtoken = "9.3.0"
regex = "1.10.4"
env_logger = "0.11.3"
temp-env = { features = ["async_closure"], version = "0.3.6" }
actix-web-actors = "4.3.0"
tokio-tungstenite = "0.23.1"
actix = "0.13.5"
log = "0.4.22"
